--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body {
 
 .link__hover-effect:hover {
     border-bottom: 2px solid #6415ff;
-    transition: all 300ms ease;
+
     color: #6415ff;
 
 }
@@ -122,23 +122,56 @@ text-align: left;
 
 /* CTA  */
 
-input {
+input  {
     background-color: #fff;
     padding: 20px 192px 20px 32px;
     font-size: 100%;
     font-weight: 500;
     border-radius: 50px;
-    border-width: 2px;
+    border-color: #A0Aec0;
+    border-width: 1px;
+    padding-right: 100px;
+    width: 100%;
     
-   
+}
+
+input:focus {
+    outline: none;
+}
+
+input::placeholder {
+    color: #A0Aec0;
+}
+
+.header__btn {
+    background-color: #6415ff;
+    border: 0px;
+    border-radius: 50px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    padding: 15px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
 .header__action {
+    position: relative;
+    display: inline-block;
+    width: 80%;
 
-display: flex;
-flex-direction: row;
-
+    
 }
+
+.header__btn:hover {
+    background-color: #5212d2;
+    transition: all 300ms ease;
+}
+
+
+
+/* header customers */
 
 .header__customers {
     margin-top: 80px;
