--- a/styles.css
+++ b/styles.css
@@ -289,3 +289,67 @@ input::placeholder {
     max-width: 240px;
     text-align: left;
 }
+
+/* quality work section */
+
+.quality__cont--two {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 80px 0;
+    
+    
+}
+
+.quality__img--wrapper {
+    width: 50%;
+    border: 1px solid #7c8ba14b;
+}
+
+.quality__img {
+    max-width: 100%;
+    
+}
+
+.quality__info--cont {
+    display: flex;
+    flex-direction: column;
+    
+    width: 50%;
+    padding: 32px 0;
+    margin-right: 24px;
+}
+
+.quality__sub--title {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.quality__title {
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 16px;
+}
+
+.quality__para {
+    font-size: 18px;
+    font-weight: 500;
+    max-width: 75%;
+    color: #7c8ba1;
+    margin-top: 16px;
+}
+
+.quality__button {
+    background-color: #6415ff;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    margin-top: 32px;
+    padding: 16px 36px;
+    border: none;
+    border-radius: 50px;
+}
+
+.quality__button:hover {
+    background-color: #5212d2;
+    transition: all 300ms ease;
+}
