--- a/styles.css
+++ b/styles.css
@@ -303,6 +303,8 @@ input::placeholder {
 .quality__img--wrapper {
     width: 50%;
     border: 1px solid #7c8ba14b;
+    display: flex;
+    align-items: center;
 }
 
 .quality__img {
@@ -352,4 +354,83 @@ input::placeholder {
 .quality__button:hover {
     background-color: #5212d2;
     transition: all 300ms ease;
+}
+
+/* steps section */
+
+.steps__cont--two {
+    display: flex;
+    align-items: center;
+    padding: 80px 0;
+    max-height: 100vh;
+}
+
+.steps__img--wrapper {
+    width: 50%;
+}
+
+.steps__img {
+    width: 100%;
+}
+
+.steps__info--container {
+    margin-left: 48px;
+    width: 50%;
+}
+
+.steps__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+    
+}
+
+.steps__subheading {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.steps__title {
+    font-size: 48px;
+    color: #243e63;
+    margin-top: 16px;
+}
+
+.steps__container {
+    margin-top: 18px;
+  
+}
+
+
+
+.step {
+    display: flex;
+    justify-content: flex-start;
+    
+    margin-top: 32px;
+}
+
+.step__number {
+    font-size: 36px;
+    color: #cbd5e0;
+   
+    
+}
+
+.step__info {
+    margin-left: 24px;
+}
+
+.step__title {
+    font-size: 20px;
+    color: #243e63;
+}
+
+.step__para {
+    margin-top: 12px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #718096;
+    max-width: 80%;
 }
