--- a/styles.css
+++ b/styles.css
@@ -608,7 +608,7 @@ input::placeholder {
 
 
 .business__plan {
-    
+
     background: #6415ff;
     background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
 }
@@ -728,7 +728,7 @@ input::placeholder {
 /* testimonials */
 
 .testimonial__container {
-    padding:80px 0;
+    padding: 80px 0;
 
 }
 
@@ -800,7 +800,7 @@ input::placeholder {
     align-items: center;
     justify-content: space-between;
     margin-top: 16px;
-    
+
 }
 
 .review__img--container {
@@ -843,7 +843,7 @@ input::placeholder {
     font-size: 24px;
     color: #6415ff;
     padding: 8px;
-    
+
 }
 
 .fa-caret-right {
@@ -854,7 +854,7 @@ input::placeholder {
 
 .review__arrow {
     text-decoration: none;
-    
+
 
 }
 
@@ -920,14 +920,14 @@ input::placeholder {
 }
 
 .faq__title {
-font-size: 20px;
-color: #2d3748;
+    font-size: 20px;
+    color: #2d3748;
 }
 
 .faq__info {
-margin-top: 16px;
-font-size: 16px;
-color: #2d3748;
+    margin-top: 16px;
+    font-size: 16px;
+    color: #2d3748;
 
 
 }
@@ -939,5 +939,95 @@ color: #2d3748;
 
 .fa-angle-down {
     font-size: 20px;
+    color: #6415ff;
+}
+
+/* footer */
+
+.footer__container {
+    padding: 60px;
+
+}
+
+.footer__links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    
+}
+
+.footer__link {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% / 5);
+    align-items: center;
+    margin-top: 36px;
+}
+
+footer {
+
+
+    background-color: rgba(100, 21, 255);
+}
+
+.link__title {
+    font-size: 16px;
+    color: #f7fafc;
+    margin-bottom: 12px;
+}
+
+.link__name {
+    margin-top: 12px;
+    color: #f7fafc;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.footer__bottom--info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 56px;
+    
+    
+}
+
+.footer__logo--wrapper {
+    display: flex;
+    border: 2px solid #f7fafc;
+    background-color: #f7fafc;
+    border-radius: 4px;
+}
+
+.footer__logo {
+    height: 32px;
+    width: 32px ;   
+}
+
+.footer__copyright {
+    color: #f7fafc;
+    font-weight: 500;
+}
+
+
+.footer__icons {
+    display: flex;
+}
+
+.footer__icon {
+    margin-left: 8px;
+    background: #f7fafcf4;
+    height: 36px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: none;
+    padding: 8px;
+}
+
+.fa-facebook-f, .fa-twitter, .fa-youtube {
     color: #6415ff;
 }
