--- a/styles.css
+++ b/styles.css
@@ -1031,3 +1031,85 @@ footer {
 .fa-facebook-f, .fa-twitter, .fa-youtube {
     color: #6415ff;
 }
+
+/* menu button */
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 36px;
+    text-align: center;
+    border: none;
+    color: #A0Aec0;
+    display: none;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #f7fafc;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    transition: all 300ms ease;
+    opacity: 0;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.menu__list {
+    font-size: 24px;
+    padding: 32px 0;
+    list-style: none;
+    
+}
+
+.menu__link {
+    color: #6415ff;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: #A0Aec0;
+}
+
+/* responsive properties */
+
+@media (max-width: 768px) {
+    .btn__menu {
+        display: block;
+    }
+
+    .nav__link--list {
+        display: none;
+    }
+
+    .header__container {
+        flex-direction: column;
+    }
+}
